Corrections version mobile de la section 1

--- a/styles/style-mobile.css
+++ b/styles/style-mobile.css
@@ -59,52 +59,102 @@ header li a:hover /*Effets au survol : ligne bleue en-dessous et texte en bleu (
 }
 
 /* Ajustements de la SECTION 1 */
-.page
+
+.page /* Marges plus importantes sur les côtés */
 {
-    margin-left: 30px;
-    margin-right: 30px;
+    font-size: 1em;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
-button
+h1 /* Agrandir font-size*/
 {
+    font-size: 2em;
+    line-height: 1em;
+}
+
+.recherche .icone
+{
+    height: 50px;
+    width: 50px;
+    border-radius: 20px 0 0 20px;
+}
+
+.recherche i
+{
+    font-size: 1.2em;
+}
+
+.recherche input
+{
+    height: 50px;
+    padding-left: 20px;
+}
+
+.recherche button
+{
+    height: 50px;
+    width: 50px;
+    border-radius: 0 20px 20px 0;
     font-size: 0;
     background-image: url("search.svg");
     background-repeat: no-repeat;
-    background-size: 10px;
+    background-size: 15px;
     background-position: center;
-    border-radius: 0 10px 10px 0;
-    border:none;
-    height: 30px;
-    width: 30px;
 }
 
 .filtres
 {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left:30px;
-    margin-right:30px;
-}
-
-.filtres p
-{
-    margin-bottom: 0;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .filtres ul
 {
-    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     margin-left: 0;
-
+    padding-left: 0;
+    margin-top: 0;
 }
 
 .filtres li
 {
-    margin-bottom: 15px;
     margin-left: 0;
+    margin-bottom: 10px;
+    padding-left: 0;
+    height: 50px;
+    border-radius: 40px;
+    padding-right: 20px;
 }
 
+.filtres .icone
+{
+    height: 50px;
+    width: 50px;
+    border-radius: 40px;
+}
+
+.filtres i
+{
+font-size: 1.2em;
+}
+
+.filtres input
+{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.info
+{
+    margin-left: 40px;
+    margin-right: 40px;
+}
 
 /* Ajustements du FOOTER */
 footer /*Pied de page comprenant trois blocs alignés, fond gris sur toute la largeur*/
